[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rockbox-db-manager"
version = "1.0.0"
description = "A CLI tool for managing Rockbox database files"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "widemic"}
]
dependencies = [
    "mutagen"
    "tqdm"
]

[project.urls]
Homepage = "https://github.com/TheBaron13/rockboxManager"

[project.scripts]
rbx-m = "rockbox_db_manager.cli:main"
